# yaas

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: Dockerfile  entrypoint-container.sh  entrypoint-docker.sh  entrypoint-krun.sh  entrypoint-podman.sh  entrypoint.sh  fakeuid.c  setup-podman.sh  yaas-profile.sh
docs/: configuration.md  internals.md  usage.md
src/agent_wrap/: __init__.py  cli.py  config.py  constants.py  container.py  runtime.py
src/agent_wrap/data/: mise.toml
src/yaas/: __init__.py  cli.py  completions.py  config.py  constants.py  container.py  logging.py  platform.py  quadlet.py  runtime.py  schema.py  startup_ui.py  worktree.py
src/yaas/data/: config.toml  mise.toml
src/yaas/runtime/: __init__.py  base.py  docker.py  krun.py  podman.py  types.py
tests/: __init__.py  conftest.py  helpers.py  test_box.py  test_completions.py  test_config.py  test_container.py  test_platform.py  test_quadlet.py  test_runtime.py  test_schema.py  test_worktree.py
